# nimbus

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  REFLECT.md  TODO-claude.md  TODO.md  V2_MIGRATION.md  VCPU_MIXED_RESPONSE_MODIFICATION.md  WEB_UI_GUIDE.md  __init__.py  a.out  ascii-rendering-comparison.md  ascii_architecture_demo.md  benchmark_refactoring_results.json  benchmark_results_e2e.json  check_api.py  debug_session.py  demo_file.py  dispatch_test.py  docker-compose.dev.yml  docker-compose.yml  exercise_parallel.py  fibonacci.py  final_test_script_manual.py  fix_tests.py  hello.py  hello_dispatch.py  hello_from_core.txt  hellotest.txt  inspect_capabilities.py  inspect_db.py  long_task.sh  math_toolkit.py  nested_parallel_assessment.md  nimbus  (+35 more)
agents/: default.yaml
bridge/: discord-bot.ts  package-lock.json  package.json  pi-ai-server.ts  pi-bridge.ts  test-bridge.py  test-pi-ai.ts  tsconfig.json
cli/: main.py
core/: __init__.py  agent.py  checkpoint.py  factory.py  memory.py  planner.py  runtime.py  tracing.py  types.py  vector_store.py
demo/: README_observability.md  fibonacci.py  greeting.py  observability_config.yaml  observability_demo.py  test_fib.py  test_greeting.py  timeout_test.py
demo_fib/: fib.py
demo_project/: .gitignore  app.py  requirements.txt
deploy/: DEPLOY.md  README.md  com.nimbus.server.plist  nginx.conf  nimbus.service  setup.sh  test.sh
design/: skill_system_proposal.md
docker/: start.sh
docs/: 2026-multi-agent-orchestration-upgrade-design.md  ARCHITECTURE_REVIEW_2026_02.md  DOCS_CLEANUP_PLAN.md  NIMBUS_NEXT_ARCHITECTURE.md  TODO.md  actual_architecture.md  actual_key_tech.md  advanced-usage.md  agent-long-context-memory-solutions_1770221777810.md  agent-os-architecture.md  agent-os-process-mechanism.md  agent-os-von-neumann-architecture.md  ai-sdk-v6-stream-protocol.md  api-reference.md  architecture.md  architecture_overview.md  ascii-rendering-review_1769932345990.md  code-agent-capability-tests.md  (+75 more)
(+2400 files in other folders)
